--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -1,26 +1,44 @@
-name: Daily Repo Update
+name: Daily Auto Commit
 
+# The 'on' section tells the robot WHEN to run
 on:
   schedule:
-    - cron: '30 18 * * *'   # Runs once daily at 18:30 UTC
-  workflow_dispatch:        # Allows manual run (for testing)
+    # This cron syntax means: run at 14:30 (2:30 PM UTC) every single day.
+    # The format is: minute hour day-of-month month day-of-week
+    - cron: '30 14 * * *'
+  
+  # 'workflow_dispatch' gives us a manual "Run" button to test it immediately
+  workflow_dispatch:
 
+# Give the robot permission to push changes back to your repository
+permissions:
+  contents: write
+
+# The 'jobs' section tells the robot WHAT to do
 jobs:
-  daily-commit:
-    runs-on: ubuntu-latest
-
+  auto-commit-job:
+    runs-on: ubuntu-latest # The type of virtual computer the robot will use
+    
     steps:
+      # Step 1: The robot downloads a copy of your code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Update file - 23f3003847@ds.study.iitm.ac.in
+      # Step 2: The robot makes a change and saves it
+      - name: Make a commit for 23f3003847@ds.study.iitm.ac.in
         run: |
-          echo "Last update: $(date)" >> daily-log.txt
-
-      - name: Commit changes
-        run: |
-          git config --global user.name "GitHub Action"
+          # 1. Tell Git who is making the change
+          git config --global user.name "DevSync Automation"
           git config --global user.email "23f3003847@ds.study.iitm.ac.in"
-          git add daily-log.txt
-          git commit -m "Daily automated update" || echo "No changes"
+          
+          # 2. Make a visible change: Write the current date/time into a text file
+          echo "Automated commit ran on $(date)" >> activity_log.txt
+          
+          # 3. Tell Git to track this new change
+          git add activity_log.txt
+          
+          # 4. Commit (save) the change with a message
+          git commit -m "chore: daily automated activity update"
+          
+          # 5. Push (upload) the change back to GitHub
           git push
